@@ -4,6 +4,7 @@ CHANGES
   * Added approximation for t test in case of large t
   * Made some error messages clearer
   * Use callbacks at least once in all cases
+  * Removed unexported function oneWayAOV.Gibbs(), and related C functions, due to redundancy
 
   CHANGES IN BayesFactor VERSION 0.9.10-2
 
